fix svg align

--- a/assets/css/_base.scss
+++ b/assets/css/_base.scss
@@ -30,7 +30,7 @@ code {
   }
 
   // see https://github.com/hugo-mods/icons/blob/main/assets/mod-icons/style.css
-  vertical-align: -0.14em;
+  vertical-align: -0.140em;
 }
 
 nav a {
